--- a/client/app/main/main.html
+++ b/client/app/main/main.html
@@ -1,28 +1,11 @@
-<div ng-include="'components/navbar/navbar.html'"></div>
+<div layout="column" layout-align="center center">
+    <h1>Basejump1: Voting APP </h1>
 
-<header class="hero-unit" id="banner">
-  <div class="container">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">Kick-start your next web app with Angular Fullstack</p>
-    <img src="assets/images/yeoman.png" alt="I'm Yeoman">
-  </div>
-</header>
-
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12">
-      <h1 class="page-header">Features:</h1>
-      <ul class="nav nav-tabs nav-stacked col-md-4 col-lg-4 col-sm-6" ng-repeat="thing in awesomeThings">
-        <li><a href="#" tooltip="{{thing.info}}">{{thing.name}}</a></li>
-      </ul>
+    <div layout="row" layout-align="center center">
+        <md-button ui-sref="signup" class="md-raised md-primary">Signup</md-button>
+        <md-button ui-sref="login" class="md-primary">Login</md-button>
     </div>
-  </div>
+    <md-button class="md-accent">Sign in with twitter</md-button>
 </div>
 
-<footer class="footer">
-  <div class="container">
-      <p>Angular Fullstack v2.1.1 |
-        <a href="https://twitter.com/tyhenkel">@tyhenkel</a> |
-         <a href="https://github.com/DaftMonk/generator-angular-fullstack/issues?state=open">Issues</a></p>
-  </div>
-</footer>
+
