--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -1,3 +1,33 @@
-<div class="col-md-12">
-This is the dashboard view.
-</div>
+<md-toolbar>
+    <div layout="row">
+        <div class="md-toolbar-tools">
+            <h2>
+                <span>Basejump 1: VotePlex</span>
+            </h2>
+
+            <span flex></span>
+            <h5>Hello, Pranu</h5>
+            <md-button class="md-accent md-raised">Logout</md-button>
+        </div>
+    </div>
+</md-toolbar>
+
+<md-content flex>
+    <div layout="column" layout-align="center center">
+        <h1>Dashboard</h1>
+        <h4>What would you like to do today?</h4>
+
+        <div layout="row" layout-align="center center">
+            <md-button class="md-accent md-raised">New Poll</md-button>
+            <md-button class="md-accent">My Polls</md-button>
+        </div>
+    </div>
+</md-content>
+
+<md-content flex>
+
+    <div layout="column" layout-align="center center">
+        <h3>New Poll</h3>
+        <h6>name your poll</h6>
+    </div>
+</md-content>
