--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -24,10 +24,28 @@
     </div>
 </md-content>
 
-<md-content flex>
+<md-content flex="100">
 
-    <div layout="column" layout-align="center center">
+    <form name="form" id="form" role="form" ng-submit="form.$valid && submitPoll()" layout="column" layout-align="center center">
         <h3>New Poll</h3>
         <h6>name your poll</h6>
-    </div>
+        <md-input-container style="width: 40%;" flex="100">
+            <label></label>
+            <input type="text" placeholder="What is your favorite band name?" ng-model="poll.name" required/>
+        </md-input-container>
+        <h5>Options</h5>
+
+        <div layout="row" layout-align="center center" ng-repeat="option in poll.options track by $index">
+            <md-input-container>
+                <label></label>
+                <input type="text" placeholder="This is option {{$index}}" ng-model="poll.options[$index]"/>
+            </md-input-container>
+            <md-button class="md-warn" type="button" ng-click="deleteOption($index)">delete</md-button>
+        </div>
+        <md-button class="md-accent" type="button" ng-click="addOption()">Add Option</md-button>
+
+        <div>
+            <md-button class="md-raised md-primary" type="submit"> Submit Poll </md-button>
+        </div>
+    </form>
 </md-content>
