user can upvote from the frontend

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -6,7 +6,7 @@
             </h2>
 
             <span flex></span>
-            <h5>Hello, Pranu</h5>
+            <h5>Hello, {{getCurrentUser().name}}</h5>
             <md-button class="md-accent md-raised">Logout</md-button>
         </div>
     </div>
