--- a/client/app/poll/poll.html
+++ b/client/app/poll/poll.html
@@ -1,3 +1,43 @@
-<div class="col-md-12">
-This is the poll view.
-</div>
+<md-toolbar>
+    <div layout="row">
+        <div class="md-toolbar-tools">
+            <h2>
+                <span>Basejump 1: VotePlex</span>
+            </h2>
+
+            <span flex></span>
+            <h5>Hello, {{getCurrentUser().name}}</h5>
+            <md-button class="md-accent md-raised">Logout</md-button>
+        </div>
+    </div>
+</md-toolbar>
+
+<md-content>
+    <div layout="column" layout-align="center center">
+        <h2>
+            {{poll.name}}
+        </h2>
+        <h4>
+            by {{poll.author}}
+        </h4>
+
+        <div>
+            Choose from the following options:
+        </div>
+        <md-radio-group>
+            <div ng-repeat="option in poll.options track by $index">
+                <md-radio-button ng-click="optionIndexFinder($index)" value="{{option}}">{{option}}
+                </md-radio-button>
+            </div>
+        </md-radio-group>
+        <md-button ng-click="upVote()" class="md-raised md-primary">Submit</md-button>
+    </div>
+</md-content>
+
+<md-content layout="row" layout-align="center center">
+    <canvas id="{{poll._id}}" class="chart chart-bar"
+            chart-data="poll.votes" chart-labels="poll.options"
+            chart-options='{legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%>: <strong><%=segments[i].value%></strong><%}%></li><%}%></ul>"}'>
+    </canvas>
+    <div>{{poll.votes}}</div>
+</md-content>
