--- a/client/app/poll/poll.html
+++ b/client/app/poll/poll.html
@@ -21,23 +21,25 @@
             by {{poll.author}}
         </h4>
 
-        <div>
-            Choose from the following options:
-        </div>
-        <md-radio-group>
-            <div ng-repeat="option in poll.options track by $index">
-                <md-radio-button ng-click="optionIndexFinder($index)" value="{{option}}">{{option}}
-                </md-radio-button>
+        <div layout="column" layout-align="center center" ng-hide="showChart">
+            <div>
+                Choose from the following options:
             </div>
-        </md-radio-group>
-        <md-button ng-click="upVote()" class="md-raised md-primary">Submit</md-button>
+            <md-radio-group>
+                <div ng-repeat="option in poll.options track by $index">
+                    <md-radio-button ng-click="optionIndexFinder($index)" value="{{option}}">{{option}}
+                    </md-radio-button>
+                </div>
+            </md-radio-group>
+            <md-button ng-click="upVote()" ng-disabled="disable" ng- class="md-raised md-primary">Submit</md-button>
+        </div>
     </div>
 </md-content>
 
-<md-content layout="row" layout-align="center center">
+<md-content layout="row" layout-align="center center" ng-show="showChart">
     <canvas id="{{poll._id}}" class="chart chart-bar"
-            chart-data="poll.votes" chart-labels="poll.options"
+            chart-data="data" chart-labels="poll.options"
             chart-options='{legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%>: <strong><%=segments[i].value%></strong><%}%></li><%}%></ul>"}'>
     </canvas>
-    <div>{{poll.votes}}</div>
+
 </md-content>
