some minor changes

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -7,7 +7,7 @@
 
             <span flex></span>
             <h5>Hello, {{getCurrentUser().name}}</h5>
-            <md-button class="md-accent md-raised">Logout</md-button>
+            <md-button class="md-accent md-raised" ng-click="logout()">Logout</md-button>
         </div>
     </div>
 </md-toolbar>
