--- a/client/app/poll/poll.html
+++ b/client/app/poll/poll.html
@@ -6,8 +6,8 @@
             </h2>
 
             <span flex></span>
-            <h5>Hello, {{getCurrentUser().name}}</h5>
-            <md-button class="md-accent md-raised">Logout</md-button>
+            <h5>Hello, {{username}}</h5>
+            <md-button class="md-accent md-raised" ng-click="logout()">Logout</md-button>
         </div>
     </div>
 </md-toolbar>
@@ -36,10 +36,10 @@
     </div>
 </md-content>
 
-<md-content layout="row" layout-align="center center" ng-show="showChart">
+<md-content ng-show="showChart">
     <canvas id="{{poll._id}}" class="chart chart-bar"
             chart-data="data" chart-labels="poll.options"
-            chart-options='{legendTemplate: "<ul class=\"<%=name.toLowerCase()%>-legend\"><% for (var i=0; i<segments.length; i++){%><li><span style=\"background-color:<%=segments[i].fillColor%>\"></span><%if(segments[i].label){%><%=segments[i].label%>: <strong><%=segments[i].value%></strong><%}%></li><%}%></ul>"}'>
+            >
     </canvas>
 
 </md-content>
